build script update